<resources>
    <string name="app_name">ExamenAndroid</string>
    <string name="btn_start">Start</string>
    <string name="et_password">Password</string>
    <string name="et_name">Name</string>
    <string name="tv_title">Quiz App</string>
    <string name="tv_signup">Don\'t have an account? Sign up</string>
    <string name="tv_create_an_account">Create an Account</string>
    <string name="lets_play_tv">Let\'s Play!</string>
    <string name="tv_choose_quiz">Choose the kind of Quiz you want to try</string>
    <string name="generalBtn">General</string>
    <string name="movies_and_seriesBtn"><![CDATA[Movies & Series]]></string>
    <string name="information">Information</string>
    <string name="log_out">Log out</string>
    <string name="home">Home</string>
    <string name="slogan_header">Quiz it! Do you know it?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_the_application">About the Application</string>
    <string name="little_msg">This is a Quiz Game Application. You have the choice between mutiple kind quizes. Quiz it! Do you know it?</string>
</resources>