<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e1f5fe"
    tools:context=".HomePageActivity">

    <TextView
        android:id="@+id/tv_welcome_msg"
        android:layout_width="396dp"
        android:layout_height="52dp"
        android:layout_marginTop="176dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/lets_play_tv"
        android:textAlignment="center"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_author_msg"
        android:layout_width="251dp"
        android:layout_height="57dp"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/tv_choose_quiz"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome_msg" />

    <Button
        android:id="@+id/btn_general"
        android:layout_width="185dp"
        android:layout_height="55dp"
        android:layout_marginTop="64dp"
        android:text="@string/generalBtn"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_author_msg" />

    <Button
        android:id="@+id/btn_ms"
        android:layout_width="185dp"
        android:layout_height="55dp"
        android:layout_marginTop="28dp"
        android:text="@string/movies_and_seriesBtn"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_general" />


</androidx.constraintlayout.widget.ConstraintLayout>